--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ venv/
 # 환경 변수 (API 키 등이 들어있으므로 절대 금지!)
 .env
 
+# 인증 설정 (bcrypt 해시 비밀번호 포함 — 절대 커밋 금지!)
+config.yaml
+
 # AI 모델 파일 (용량이 너무 커서 깃허브에 안 올라가요)
 *.pth
 *.pkl
